--- a/src/app/funds/balance/qubera-popup/create-fug/create-fug.component.html
+++ b/src/app/funds/balance/qubera-popup/create-fug/create-fug.component.html
@@ -1,3 +1,72 @@
-<p>
-  create-fug works!
-</p>
+<!-- modal header start -->
+<div class="modal__header-mob">
+  <div class="steps__counter steps__counter--mob">{{'step' | translate}}
+    <span class="steps__counter-val">{{step}}</span>/4
+  </div>
+  <div class="modal__header-mob-controls">
+    <a class="modal__control-mob" (click)="onCloseSendMoneyPopup()">
+      <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
+  </div>
+</div>
+<div class="modal__header">
+  <ul class="steps">
+    <li class="steps__item"
+        [ngClass]="{'steps__item--current': step === 1}"
+    >
+      <a class="steps__link" (click)="setStep(1)">
+        <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
+        <span class="steps__number-mob-current">1. {{'Submission of the questionnaire' | translate}}</span>
+        <span class="steps__title">{{'Submission of the questionnaire' | translate}}</span>
+      </a>
+    </li>
+    <li class="steps__item" *ngIf="step >= 2"
+        [ngClass]="{'steps__item--current': step === 2}"
+    >
+      <a class="steps__link" (click)="setStep(2)">
+        <span class="steps__number" [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
+        <span class="steps__number-mob-current">2. {{'Phone verification' | translate}}</span>
+        <span class="steps__title">{{'Phone verification' | translate}}</span>
+      </a>
+    </li>
+    <li class="steps__item" *ngIf="step >= 3"
+        [ngClass]="{'steps__item--current': step === 3}"
+    >
+      <a class="steps__link" (click)="setStep(3)">
+        <span class="steps__number" [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
+        <span class="steps__number-mob-current">3. {{'KYC Walkthrough' | translate}}</span>
+        <span class="steps__title">{{'KYC Walkthrough' | translate}}</span>
+      </a>
+    </li>
+    <li class="steps__item "
+        *ngIf="step === 4"
+        [ngClass]="{'steps__item--current': step >= 4}"
+    >
+      <a class="steps__link" (click)="setStep(4)">
+        <span class="steps__number" [ngClass]="{'steps__number--current': step === 4, 'steps__number--valid': step != 4 }">4</span>
+        <span class="steps__number-mob-current">4. {{'Bank check' | translate}}</span>
+        <span class="steps__title">{{'Bank check' | translate}}</span>
+      </a>
+    </li>
+  </ul>
+  <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ 4</div>
+</div>
+<!-- modal header end -->
+
+<div class="modal__content">
+  <app-step-one
+    *ngIf="step === 1"
+  >
+  </app-step-one>
+  <app-step-two
+    *ngIf="step === 2"
+  >
+  </app-step-two>
+  <app-step-three
+    *ngIf="step === 3"
+  >
+  </app-step-three>
+  <app-step-four
+    *ngIf="step === 4"
+  >
+  </app-step-four>
+</div>
