--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -56,7 +56,7 @@
 <!-- если не зареган на fug -->
 
   <div class="qubera-btn-wr">
-    <button class="btn btn--active balance__title-btn">{{'Open Account' | translate}}</button>
+    <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Open Account' | translate}}</button>
   </div>
 
 <!-- end 'если не зареган на fug' -->
