--- a/src/app/funds/balance/qubera-popup/withdraw/withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/withdraw.component.html
@@ -15,11 +15,11 @@
       >
         <a class="steps__link" (click)="setStep(1)">
           <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
-          <span class="steps__number-mob-current">1. {{'Submission of the questionnaire' | translate}}</span>
-          <span class="steps__title">{{'Submission of the questionnaire' | translate}}</span>
+          <span class="steps__number-mob-current">1. {{'Оформление заявки' | translate}}</span>
+          <span class="steps__title">{{'Оформление заявки' | translate}}</span>
         </a>
       </li>
-      <li class="steps__item" *ngIf="step >= 2"
+      <li class="steps__item"
           [ngClass]="{'steps__item--current': step === 2}"
       >
         <a class="steps__link" (click)="setStep(2)">
@@ -28,7 +28,7 @@
           <span class="steps__title">{{'Phone verification' | translate}}</span>
         </a>
       </li>
-      <li class="steps__item" *ngIf="step >= 3"
+      <!-- <li class="steps__item" *ngIf="step >= 3"
           [ngClass]="{'steps__item--current': step === 3}"
       >
         <a class="steps__link" (click)="setStep(3)">
@@ -46,13 +46,13 @@
           <span class="steps__number-mob-current">4. {{'Bank check' | translate}}</span>
           <span class="steps__title">{{'Bank check' | translate}}</span>
         </a>
-      </li>
+      </li> -->
     </ul>
-    <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ 4</div>
+    <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ 2</div>
   </div>
   <!-- modal header end -->
   
-  <div class="modal__content">
+  <div class="modal__content qubera-content">
     <app-step-one-withdraw
       *ngIf="step === 1"
     >
