--- a/src/assets/scss/pages/fiat/_fiat-fs.scss
+++ b/src/assets/scss/pages/fiat/_fiat-fs.scss
@@ -499,6 +499,26 @@
 
 
 .fiat-deposit-s1{
+	.secundary-form{
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		.input-block{
+			position: relative;
+			width: calc(50% - 15px);
+			max-width: 300px;
+			margin-bottom: 25px;
+		}
+		.wrap-input__input{
+
+		}
+		.wrap-input__label{
+
+		}
+	}
+
+
+
 	h2{
 		font-weight: 400;
 		font-size: 24px;
@@ -615,44 +635,68 @@
 	} 
 
 }
-	.notice-block{
-		padding: 27px 30px;
-		background: #E9F2FF;
-		.head-notice{
-			font-weight: 500;
-			font-size: 14px;
-			line-height: 1.15;
-			color: #000000;
-			margin-bottom: 16px;
-		}
-		ul{
-			li{
-				position: relative;
-				padding-left: 10px;
-				&:before{
-					content: "";
-					position: absolute;
-					top: 4px;
-					width: 4px;
-					height: 4px;
-					border-radius: 50%;
-					background: #237BEF;
-					left: 0;
+.notice-block{
+	padding: 27px 30px;
+	background: #E9F2FF;
+	.head-notice{
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 1.15;
+		color: #000000;
+		margin-bottom: 16px;
+		display: block;
+	}
+	ul{
+		li{
+			position: relative;
+			padding-left: 10px;
+			margin-bottom: 8px;
+			&:before{
+				content: "";
+				position: absolute;
+				top: 4px;
+				width: 4px;
+				height: 4px;
+				border-radius: 50%;
+				background: #237BEF;
+				left: 0;
 
-				}
-				span{
-					font-weight: 400;
-					font-size: 14px;
-					line-height: 1.15;
-					color: #4B4B4B;
-					    letter-spacing: -.15px;
-				}
+			}
+			span{
+				font-weight: 400;
+				font-size: 14px;
+				line-height: 1.15;
+				color: #4B4B4B;
+				letter-spacing: -.15px;
 			}
 		}
 	}
+}
 
 .modal__content{
 	&.qubera-content{
 		padding: 32px 0;
+	}
+}
+
+
+.fiat-withdraw-s1{
+	.main-form{
+		margin-bottom: 28px;
+		border-bottom: 1px solid #ECECEC;
+	}
+	.info-block {
+		.item-info{
+			justify-content: flex-start;
+		}
+		.key-info{
+			    margin-right: 56px;
+    min-width: 143px;
+		}
+		.left-part{
+			margin-left: auto;
+			max-width: 510px;
+			margin-right: 0;
+		}
 	}
 }
