--- a/src/app/funds/balance/qubera-popup/transfer/transfer.component.html
+++ b/src/app/funds/balance/qubera-popup/transfer/transfer.component.html
@@ -1,6 +1,31 @@
-<p>
-  transfer works!
-</p>
+<div class="modal__content qubera-content">
+	<div class="fiat-deposit-s1 fiat-transfer">
+		<h2>Подтверждение транзакции</h2>
+		<p>Чтобы отправить деньги на свой торговый счет в Exrates подтвердите операцию с помощью кода и смс.</p>
+		<form action="#">
+			<div class="input-block">
+				<input type="text" name="code" class="wrap-input__input" formControlName="code">
+				<label class="wrap-input__label" for="firstname">code </label>
+			</div>
+			<button class="btn btn--active balance__title-btn">Подтвердить</button>
+			<div class="change-phone">
+			<a href="#">Сменить номер телефона</a>	
+			</div>
+			
+		</form>
+	</div>
+		<div class="notice-block">
+			<span class="head-notice">Please note:</span>
+			<ul>
+				<li>
+					<span>Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.
+					</span>
+				</li>
+				<li>
+					<span>After making a withdrawal, you can track its progress in history on funds page.
+					</span>
+				</li>
 
-
-<div class="modal__content"></div>
+			</ul>
+		</div>
+</div>
