change components and add some logic and methods for work with api

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -332,7 +332,7 @@
     *ngIf="showQuberaPopup"
     [showPopup]="showQuberaPopup"
     [optionData]="QuberaData"
-    [step] = "1"
+    [steper]="1"
     (closeSendQuberaPopup)="openQuberaPopup(false)"
   >
   </app-qubera-popup>
