--- a/src/app/settings/bank-verification/bank-verification.component.html
+++ b/src/app/settings/bank-verification/bank-verification.component.html
@@ -223,7 +223,7 @@
         </div>
       </div>
 
-      <div class="settings__form-row">
+      <!-- <div class="settings__form-row">
         
         <div class="wrap-input wrap-input--fix230"
           [ngClass]="{'wrap-input--error': currentFirstName.valid && currentLastName.valid && currentAddress.valid && currentCity.valid && currentCountryCode.valid && currentcurrencyCode.touched && currentcurrencyCode.errors != null}"
@@ -236,10 +236,10 @@
             required
           >
           <label class="wrap-input__label">{{'currency code' | translate}}</label>
-          <div class="wrap-input__line"></div>
+          <div class="wrap-input__line"></div> -->
           
           <!--Input error section starts-->
-          <ng-container *ngIf="currentFirstName.valid && currentLastName.valid && currentAddress.valid && currentCity.valid && currentCountryCode.valid && !currentcurrencyCode.valid && currentcurrencyCode.touched && currentcurrencyCode.errors != null">
+          <!-- <ng-container *ngIf="currentFirstName.valid && currentLastName.valid && currentAddress.valid && currentCity.valid && currentCountryCode.valid && !currentcurrencyCode.valid && currentcurrencyCode.touched && currentcurrencyCode.errors != null">
             <div class="input-hint-wrapper">
                 <span
                   class="wrap-input__message"
@@ -249,10 +249,10 @@
               </div>
   
           </ng-container>
-          
+           -->
           <!--Input error section ends-->
-        </div>
-      </div>
+        <!-- </div>
+      </div> -->
   
   
   
