--- a/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/deposit.component.html
@@ -14,41 +14,12 @@
           [ngClass]="{'steps__item--current': step === 1}"
       >
         <a class="steps__link" (click)="setStep(1)">
-          <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
-          <span class="steps__number-mob-current">1. {{'fiat deposit' | translate}}</span>
+          <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }"></span>
+          <span class="steps__number-mob-current">{{'fiat deposit' | translate}}</span>
           <span class="steps__title">{{'fiat deposit' | translate}}</span>
         </a>
       </li>
-      <li class="steps__item" *ngIf="step >= 2"
-          [ngClass]="{'steps__item--current': step === 2}"
-      >
-        <a class="steps__link" (click)="setStep(2)">
-          <span class="steps__number" [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
-          <span class="steps__number-mob-current">2. {{'Phone verification' | translate}}</span>
-          <span class="steps__title">{{'Phone verification' | translate}}</span>
-        </a>
-      </li>
-      <li class="steps__item" *ngIf="step >= 3"
-          [ngClass]="{'steps__item--current': step === 3}"
-      >
-        <a class="steps__link" (click)="setStep(3)">
-          <span class="steps__number" [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
-          <span class="steps__number-mob-current">3. {{'KYC Walkthrough' | translate}}</span>
-          <span class="steps__title">{{'KYC Walkthrough' | translate}}</span>
-        </a>
-      </li>
-      <li class="steps__item "
-          *ngIf="step === 4"
-          [ngClass]="{'steps__item--current': step >= 4}"
-      >
-        <a class="steps__link" (click)="setStep(4)">
-          <span class="steps__number" [ngClass]="{'steps__number--current': step === 4, 'steps__number--valid': step != 4 }">4</span>
-          <span class="steps__number-mob-current">4. {{'Bank check' | translate}}</span>
-          <span class="steps__title">{{'Bank check' | translate}}</span>
-        </a>
-      </li>
     </ul>
-    <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ 4</div>
   </div>
 
   <div class="modal__content qubera-content">
