--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -4,60 +4,39 @@
   <form [formGroup]="form" id="d-s1">
     <div class="main-form">
       <div class="select refill__select" style="display: inline-block;">
-          <!-- <div class="select__value select__value--active"
+          <div class="select__value select__value--active"
                (click)="toggleCurrencyDropdown()"
-               [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"> -->
-               <div class="select__value select__value--active">
-            <!-- <img [src]="activeFiat.name | getIconUrl:true" class="select__list-item-icon select__list-item-icon--mobile">
-              <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon select__list-item-icon--destop"> -->
-              <!-- {{activeFiat.name}} -->
-              ЕВРО
+               [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}">
+            <img [src]="activeFiat.name | getIconUrl:true" class="select__list-item-icon select__list-item-icon--mobile">
+              <img [src]="activeFiat.name | getIconUrl" class="select__list-item-icon select__list-item-icon--destop">
+              {{activeFiat.name}}
             </div>
             <div class="select__label">{{'Currency' | translate}}</div>
             <div class="select__line"></div>
             <div class="select__triangle"></div>
-          <!-- <ul class="select__list"
+          <ul class="select__list"
               [ngClass]="{'select__list--open': openCurrencyDropdown}"
-              *ngIf="openCurrencyDropdown"> -->
-              <ul class="select__list">
-            <!-- <li class="select__list-item" *ngFor="let currency of fiatNames" (click)="selectCurrency(currency)">
+              *ngIf="openCurrencyDropdown">
+            <li class="select__list-item" *ngFor="let currency of fiatNames" (click)="selectCurrency(currency)">
               <img [src]="currency.name | getIconUrl" class="select__list-item-icon">
               {{currency.name}}
-            </li> -->
-            <li class="select__list-item">
-              <!-- <img [src]="currency.name | getIconUrl" class="select__list-item-icon"> -->
-              <!-- {{currency.name}} -->
-              name1
-            </li>
-            <li class="select__list-item">
-              <!-- <img [src]="currency.name | getIconUrl" class="select__list-item-icon"> -->
-              <!-- {{currency.name}} -->
-              name2
-            </li>
-            <li class="select__list-item">
-              <!-- <img [src]="currency.name | getIconUrl" class="select__list-item-icon"> -->
-              <!-- {{currency.name}} -->
-              name3
             </li>
           </ul>
         </div>
 
         <div class="select refill__select" style="display: inline-block;">
-          <div class="select__value select__value--active">
-            Exchange bank
+          <div class="select__value select__value--active"
+            (click)="bankDropdownToggle()">
+            {{selectedBank}}
           </div>
-          <div class="select__label">{{'Currency' | translate}}</div>
+          <div class="select__label">{{'Payment system' | translate}}</div>
           <div class="select__line"></div>
           <div class="select__triangle"></div>
-          <ul class="select__list">
-            <li class="select__list-item">
-              bank1
-            </li>
-            <li class="select__list-item">
-              bank2
-            </li>
-            <li class="select__list-item">
-              bank3
+          <ul class="select__list"
+              [ngClass]="{'select__list--open': openBankSystemDropdown}"
+              *ngIf="openBankSystemDropdown">
+            <li class="select__list-item" *ngFor="let bank of banks">
+              {{bank.name}}
             </li>
           </ul>
         </div>
